<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.AddMeetingActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_meeting_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/add_meeting_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/add_meeeting_title_text_view"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/topic_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_textview">

                <EditText
                    android:id="@+id/topic_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/topic_edit_text_hint"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/select_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/select_date_text_view_string"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topic_text_input_layout" />


            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"

                android:scaleX="0.8"
                android:scaleY="0.8"
                app:layout_constraintEnd_toStartOf="@id/timePicker1"
                app:layout_constraintStart_toStartOf="@+id/add_meeting_layout"
                app:layout_constraintTop_toBottomOf="@id/select_date_text_view" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="@id/add_meeting_layout"
                app:layout_constraintStart_toEndOf="@id/datePicker1"
                app:layout_constraintTop_toBottomOf="@id/select_date_text_view" />

            <TextView
                android:id="@+id/select_meetingroom_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/select_meetingroom_text_view_string"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timePicker1" />

            <Spinner
                android:id="@+id/room_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_meetingroom_text_view" />

            <TextView
                android:id="@+id/add_ppl_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/add_ppl_text_view_string"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/room_spinner" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/mail_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/confirm_button"
                app:layout_constraintEnd_toEndOf="@id/add_meeting_layout"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/add_meeting_layout"
                app:layout_constraintTop_toBottomOf="@id/add_ppl_text_view"
                app:layout_constraintVertical_bias="1.0"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/mail_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/mail_edit_text_hint"
                        app:layout_constraintEnd_toEndOf="@id/add_ppl_img"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/mail_layout" />

                    <ImageButton
                        android:id="@+id/add_ppl_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@color/white"
                        app:srcCompat="@drawable/ic_baseline_person_add"
                        app:layout_constraintEnd_toEndOf="@id/mail_layout"
                        app:layout_constraintStart_toEndOf="@id/mail_edit_text"
                        app:layout_constraintTop_toTopOf="@id/mail_edit_text"/>

                    <EditText
                        android:id="@+id/mail_edit_text2"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/mail_edit_text_hint"
                        app:layout_constraintEnd_toEndOf="@id/add_ppl_img2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mail_edit_text" />

                    <ImageButton
                        android:id="@+id/add_ppl_img2"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@color/white"
                        app:srcCompat="@drawable/ic_baseline_person_add"
                        app:layout_constraintEnd_toEndOf="@id/mail_layout"
                        app:layout_constraintStart_toEndOf="@id/mail_edit_text2"
                        app:layout_constraintTop_toTopOf="@id/mail_edit_text2"/>

                    <EditText
                        android:id="@+id/mail_edit_text3"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/mail_edit_text_hint"
                        app:layout_constraintEnd_toEndOf="@id/add_ppl_img3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mail_edit_text2" />

                    <ImageButton
                        android:id="@+id/add_ppl_img3"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@color/white"
                        app:srcCompat="@drawable/ic_baseline_person_add"
                        app:layout_constraintEnd_toEndOf="@id/mail_layout"
                        app:layout_constraintStart_toEndOf="@id/mail_edit_text3"
                        app:layout_constraintTop_toTopOf="@id/mail_edit_text3"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>


            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Confirmer"
                app:layout_constraintEnd_toEndOf="@id/mail_scroll_view"
                app:layout_constraintStart_toStartOf="@id/mail_scroll_view"
                app:layout_constraintTop_toBottomOf="@id/mail_scroll_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
