<resources>
    <string name="app_name">Ma réu</string>
    <string name="title_activity_add_meeting">Ajouter une réunion</string>

    <!-- Layout strings -->
    <!-- AddMeetingActivity -->
    <string name="add_meeeting_title_text_view">Veuillez remplir les informations suivantes afin d\'ajouter une nouvelle réunion :</string>
    <string name="topic_edit_text_hint">Sujet de la réunion</string>
    <string name="select_date_text_view_string">Selectionnez une date et une heure :</string>
    <string name="select_meetingroom_text_view_string">Selectionnez une salle :</string>
    <string name="add_ppl_text_view_string">Ajoutez des participants :</string>
    <string name="mail_edit_text_hint">Adresse mail</string>

    <!-- Menu string -->
    <string name="filter_item_menu">Filter Item</string>
    <string name="date_filter_menu">Filtrer par date</string>
    <string name="room_filter_menu">Filtrer par lieu</string>
    <string name="remove_filter_menu">Retirer le filtre</string>
    <!-- Used for spinner -->
    <string-array name="room_name">
        <item>Salle 1</item>
        <item>Salle 2</item>
        <item>Salle 3</item>
        <item>Salle 4</item>
        <item>Salle 5</item>
        <item>Salle 6</item>
        <item>Salle 7</item>
        <item>Salle 8</item>
        <item>Salle 9</item>
        <item>Salle 10</item>
    </string-array>
</resources>